Completing the section on user administration.

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -191,23 +191,35 @@ At first, instead of using a real data diode, we are going to build the prototyp
 We identify three types of users : the administrators, the simple users and the FTP users.
 
 \subsection{Simple Users}
-Simple users are users from inside the secure network. Their main interaction with the system is that they will need to retrieve the files that were pushed into the data diode. They do no posses other privileges than that.
+Simple users are users from inside the secure network. Their main interaction with the system is that they will need to retrieve the files from the \textit{download directory}, by accessing the web interface. They do no posses other privileges than that.
 
 \subsection{Administrators}
-Administrators can monitor the system, create accounts for simple users as well as for FTP users.
+The role of the administrators is to manage the system so that it runs smoothly. They have access to all the functionalities of the administration interface as described in section \ref{sec:administration}.
 
 \subsection{FTP Users}
 FTP users operate from outside the secure network and are allowed to push files into the secure network. Each FTP user will have an account on the data diode, created by an administrator. This account allows him to push data through the data diode, via an FTP connection.
 
 \section{Administration and Management}
 \subsection{Users Administration}
-\subsubsection{Simple Users}
-If a user forgets his password, he has to contact the system administrator to obtain a new one.
-\subsubsection{Administrators}
-An administrator is able to turn on or off the data diode through the web administration page within the secure network. He also is the users and providers manager. He can create or delete a user or provider account and modify the priviliges of the accounts. 
+The administration interface allows administrators to manage the user that can access the data diode. The users from outside of the data diode are responsible for pushing files into the \textit{download directory}. The user from the inside of the secure network will then access the web interface to retrieve the files they want on their computer.
+
+\subsubsection{Administration of Simple Users}
+We decide that every user inside the secure network should be able to access the files that have been imported into the \textit{download directory}. Therefore, there will be no specific management of these users.
+
+\subsubsection{Administrators of other Administrators}
+Administrators are able to create an administrator account, or to suspend the account of another administrator.
+
+TODO : Cette section décrit l'administration des utilisateurs de type "administrateur". Donc je pense que le texte ci-dessous n'est pas dans la bonne catégorie. Le texte décrit plutot les pouvoir de l'administrateur et devrait donc se situer dans une des sections plus haut ==>\\
+An administrator is able to turn on or off the data diode through the web administration page within the secure network. He also is the users and providers manager. He can create or delete a user or provider account and modify the privileges of the accounts. 
+
 \subsection{Data Diode Installation, Configuration and Administration}
+
 \subsubsection{Installation}
+The data diode is provided to the client with the programs already installed, and a default administrator account. At first use, the password should be modified.
+
 \subsubsection{Configuration}
+The data diode settings will be specified in a configuration file that can be modified manually. The settings include the HTTP port that must be used, and the maximum size of the \textit{download directory}.
+
 \subsubsection{Administration}
 
 
