Creation of the skeleton of the risk analysis.

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -222,5 +222,10 @@ The data diode settings will be specified in a configuration file that can be mo
 
 \subsubsection{Administration}
 
+\section{Risk Analysis}
+\subsection{Assets Identification}
+\subsection{Threats Identification}
+\subsection{Vulnerabilities}
+\subsection{Risks}
 
 \end{document}
