--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -212,7 +212,7 @@ Administrators are able to create an administrator account, or to suspend the ac
 TODO : Cette section décrit l'administration des utilisateurs de type "administrateur". Donc je pense que le texte ci-dessous n'est pas dans la bonne catégorie. Le texte décrit plutot les pouvoir de l'administrateur et devrait donc se situer dans une des sections plus haut ==>\\
 An administrator is able to turn on or off the data diode through the web administration page within the secure network. He also is the users and providers manager. He can create or delete a user or provider account and modify the privileges of the accounts. 
 
-\subsection{Data Diode Installation, Configuration and Administration}
+\subsection{Data Diode Installation and Configuration}
 
 \subsubsection{Installation}
 The data diode is provided to the client with the programs already installed, and a default administrator account. At first use, the password should be modified.
@@ -220,7 +220,6 @@ The data diode is provided to the client with the programs already installed, an
 \subsubsection{Configuration}
 The data diode settings will be specified in a configuration file that can be modified manually. The settings include the HTTP port that must be used, and the maximum size of the \textit{download directory}.
 
-\subsubsection{Administration}
 \section{Risk analysis}
 \subsection{Hardware}
 \subsubsection{Source}
