--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -16,7 +16,7 @@
 	INFO-Y113 --- Management of Security: \\
 	Concept Of Operations v2}
 
-\author{DANHIER Piere, LECOCQ Alexis, NYAKI Loïc}
+\author{DANHIER Pierre, LECOCQ Alexis, NYAKI Loïc}
 
 \begin{document}
 \maketitle
@@ -98,6 +98,7 @@ The following elements are in scope, which means that it is our responsibility t
 \item{The availability of the file transfer service}
 \item{The confidentiality of user data and credentials when interacting with the data diode (see section \ref{sec:data-diode})}
 \item{The confidentiality of the data within the secure network. There should be no data leak.}
+\item{The integrity of the data pushed through the data diode}
 \end{itemize}
 
 \subsection{Out of scope}
@@ -154,7 +155,7 @@ One of the goals of this project is the creation of a web interface for managing
 \end{itemize} 
 
 \subsection{Physical Architecture}
-The data diode is composed of two separate servers connected to each other through a unidirectional fiber optics cable. The server facing the outside network is called \textit{the sender}, the the server facing the secure network is called \textit{the receiver}.\\
+The data diode is composed of two separate servers connected to each other through a unidirectional fiber optics cable. The server facing the outside network is called \textit{the sender}, the server facing the secure network is called \textit{the receiver}.\\
 
 Each server contains the following components :
 \begin{itemize}
@@ -191,7 +192,7 @@ At first, instead of using a real data diode, we are going to build the prototyp
 We identify three types of users : the administrators, the simple users and the FTP users.
 
 \subsection{Simple Users}
-Simple users are users from inside the secure network. Their main interaction with the system is that they will need to retrieve the files from the \textit{download directory}, by accessing the web interface. They do no posses other privileges than that.
+Simple users are users from inside the secure network. Their main interaction with the system is that they will need to retrieve the files from the \textit{download directory}, by accessing the web interface. They do no possess other privileges than that.
 
 \subsection{Administrators}
 The role of the administrators is to manage the system so that it runs smoothly. They have access to all the functionalities of the administration interface as described in section \ref{sec:administration}.
@@ -207,11 +208,7 @@ The administration interface allows administrators to manage the user that can a
 We decide that every user inside the secure network should be able to access the files that have been imported into the \textit{download directory}. Therefore, there will be no specific management of these users.
 
 \subsubsection{Administrators of other Administrators}
-Administrators are able to create an administrator account, or to suspend the account of another administrator.
-
-TODO : Cette section décrit l'administration des utilisateurs de type "administrateur". Donc je pense que le texte ci-dessous n'est pas dans la bonne catégorie. Le texte décrit plutot les pouvoir de l'administrateur et devrait donc se situer dans une des sections plus haut ==>\\
-An administrator is able to turn on or off the data diode through the web administration page within the secure network. He also is the users and providers manager. He can create or delete a user or provider account and modify the privileges of the accounts. 
-
+Administrators are able to create a new administrator account, or to suspend the account of another administrator. 
 \subsection{Data Diode Installation, Configuration and Administration}
 
 \subsubsection{Installation}
@@ -240,12 +237,12 @@ An unauthorized person connects into the secure network.
 \subsubsection{Threats}
 This person can then use packet sniffing techniques to read credentials and then try to connect to the data diode with a user or administrator account.
 \subsubsection{Countermeasures}
-As well as the physical access to the data diode, the integrity of the secure network is out of our scope but the use if cryptography mitigate the risk.
+As well as the physical access to the data diode, the integrity of the secure network is out of our scope but the use of cryptography mitigate the risk.
 \subsection{External network}
 \subsubsection{Source}
 An opponent take knowledge of the IP adress of the data diode.
 \subsubsection{Threats}
-He can then launch a DDOS attack against the system by floating the identification process with fake connection demands. The availability of the systemc can then be endangered.
+He can then launch a DDOS attack against the system by floating the identification process with fake connection demands. The availability of the system can then be endangered.
 \subsubsection{Countermeasures}
 When the system detects that a certain IP adress unsuccessfully tries to connect itself to the data diode a certain amount of times, we can temporarily ban this IP adress from the access to our system.  The risk is then mitigated.
 \subsubsection{Residual risk}
@@ -256,12 +253,12 @@ Someone inside the secure network who has not the administrator status wants to 
 \subsubsection{Threats}
 This person can use SQL injections or try to brute force an administrator account through the login webpage. The brute force attack can endanger the availability of the system. If the opponent manage to get an administrator account he can turn off the data diode or modify users privileges and accounts.
 \subsubsection{Countermeasures}
-We can avoid these risks by preventing SQL injections in the source code of the login webpage and by detecting unsuccessful connection attempts. When a certain amount of failed connections by the IP adress, the system bans this adress.
+We can avoid these risks by preventing SQL injections in the source code of the login webpage and by detecting unsuccessful connection attempts. After a certain amount of failed connections by the IP adress, the system bans this adress.
 \subsection{Users}
 \subsubsection{Source}
 A system halt during the creation or modification of a user profile gives rights to this user that he should not have.
 \subsubsection{Threats}
-This user can obtain the administrator status if the systems creates a user with full rights and then reduces the rights. If the system halts before or during the restrictions, the user can obtain certain rights he should not have.
+This user can obtain the administrator status if the systems creates a user with full rights and then reduces the rights. If the system halts before or during the restrictions, the user can remain with certain rights he should not have.
 \subsubsection{Countermeasures}
 We avoid this risk by creating users with no rights and then allow him some of them. If the system halts before the end of the creation or modification, the user has no rights he should no have.  
 \subsection{FTP servers}
@@ -270,7 +267,7 @@ A provider push so many files that the data diode cannot store them all.
 \subsubsection{Threat}
 A provider can lauch a "DDOS attack" by sending a lot of small files or some really big files.
 \subsubsection{Countermeasure}
-We defined a maximum size for the reportory that store the files. When a file is submitted, the system checks if there is enough space for this file.
+When a user send a certain amount of data, he needs to wait before sending again some new data. That prevents the "DDOS attack" risk and mitigate the starving risk for other users.
 
 
 
