Modification of the title to include 'risk analysis'

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -14,7 +14,7 @@
 
 \title{Royal Military Academy\\
 	INFO-Y113 --- Management of Security: \\
-	Concept Of Operations v2}
+	Concept Of Operations v2 \& Risk Analysis}
 
 \author{DANHIER Pierre, LECOCQ Alexis, NYAKI Loïc}
 
