--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -30,13 +30,13 @@ In recent years, cyber-security has become a primary concern for companies all o
 
 When trying to protect these sensitive data, a common measure is be to physically isolate the network from the internet, by creating an \textit{air gap}. Acting this way ensures that the data from the network is inaccessible from the outside world. The main issue with this method is that inevitably, some external data or files will at some point need to be imported into the secure network, be it for software update, or simply because some files from the outside are necessary for the people working in the secure network. In that case, a manual import (via USB drive, by connecting an external laptop into the secure network, or by using some other data transfer device) will be necessary.\\
 
-The problem with that method is that it can compromise the security of the secure network. For instance, the data that is manually transferred into the network may have been infected by a malware, or the secure network might already be infected by a virus. In both cases, there is a possibility for some malicious code to exfiltrate data, or to spread a virus outside, by secretly writing on the device that was originally used to import the data into the network.\\
+The problem with that method is that it can compromise the security of the secure network. For instance, the data that is manually transferred into the network may have been infected by a malware, or the secure network might already be infected by a virus. In both cases, there is a possibility for some malicious code to exfiltrate data, or to spread a virus outside, by secretly writing on the device that was originally used to import the data into the network, such as USB drives or laptops.\\
 
 As a consequence, we need to build a solution that prevents data leaks while allowing the transfer of files from the outside network into the secure network.
 
 \section{Goals of the project}
 \label{sec:goals}
-Goals define the general direction of what the organization aims to accomplish, in the long term. Here, we wish to design a system that accomplishes two main goals :
+Goals define the general direction of what the organization aims to accomplish, in the long term. Here, we wish to design a system that accomplishes three main goals :
 
 \begin{enumerate}
 \item{Create a device that completely prevents the exfiltration of data from a secure network, while allowing data to be transferred from the outside world into that secure network.}
@@ -44,7 +44,7 @@ Goals define the general direction of what the organization aims to accomplish, 
 \item{Allow specific users to manage and operate this system through an administration web page, accessible from within the secure network.}
 \end{enumerate}
 
-For this project, the general solution is imposed and should be a data diode, which we will describe in section~\ref{sec:data-diode}.
+In this project, the general solution is imposed and should be a data diode, which will be described in section~\ref{sec:data-diode}.
 
 
 \section{Objectives}
