--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -214,15 +214,14 @@ We decide that every user inside the secure network should be able to access the
 \subsubsection{Administrators of other Administrators}
 Administrators are able to create an administrator account, or to suspend the account of another administrator.
 
-\subsection{data-diode Installation, Configuration and Administration}
+\subsection{data-diode Installation and Configuration}
 
 \subsubsection{Installation}
 The data-diode is provided to the client with the programs already installed, and a default administrator account. At first use, the password should be modified.
 
 \subsubsection{Configuration}
-The data-diode settings will be specified in a configuration file that can be modified manually. The settings include the HTTP port that must be used, and the maximum size of the \textit{download directory}.
+The data-diode settings will be specified in a configuration file that can be modified manually. The settings include the \textit{HTTP port} that must be used, and the maximum size of the \textit{download directory}.
 
-\subsubsection{Administration}
 \section{Risk analysis}
 \subsection{Hardware}
 \subsubsection{Source}
@@ -254,7 +253,8 @@ When the system detects that a certain IP adress unsuccessfully tries to connect
 If the opponent has access to a botnet with enough different IP adresses, he still can DDOS attack our sytem with success. The availability of our sytem could then be suspended.
 \subsection{Administration webpage}
 \subsubsection{Source}
-Someone inside the secure network who has not the administrator status wants to obtain this right.
+Someone inside the secure network who doesn't have an administrator status wants to gain administrator rights.
+
 \subsubsection{Threats}
 This person can use SQL injections or try to brute force an administrator account through the login webpage. The brute force attack can endanger the availability of the system. If the opponent manage to get an administrator account he can turn off the data-diode or modify users privileges and accounts.
 \subsubsection{Countermeasures}
@@ -268,11 +268,14 @@ This user can obtain the administrator status if the systems creates a user with
 We avoid this risk by creating users with no rights and then allow him some of them. If the system halts before the end of the creation or modification, the user has no rights he should no have.  
 \subsection{FTP servers}
 \subsubsection{Source}
-A provider push so many files that the data-diode cannot store them all.
+A FTP user keeps pushing files in such a way that they exceed the capacity of the filesystem.
+
 \subsubsection{Threat}
 A provider can lauch a "DDOS attack" by sending a lot of small files or some really big files.
 \subsubsection{Countermeasure}
-When a user send a certain amount of data, he needs to wait before sending again some new data. That prevents the "DDOS attack" risk and mitigate the starving risk for other users.
+The system automatically checks that the size limit of the download directory isn't exceeded, as described in section  \ref{sec:administration}.\\
+
+Moreover, when a user send a certain amount of data, he will need to wait before sending anymore data. That can prevent "DDOS attack" risks and mitigate the starving risk for other users.
 
 
 
